2009/08/2:
	- update to SalomeGeometry 5.1.2
2009/07/3:
	- code cleanup in Display
2009/06/30:
	- operators overloading in GEOM_Parameter class
	- better compilation of SalomeGEOM (with the /Od) flag
2009/12/17:
	- replaced 'Quantity_Parameter' with Standard_Real wherever possible
2009/5/10:
	- Work on SCons script
	- Work on NIS display
2009/5/6:
	- operator = wrapped
2009/4/30:
	- New feature: class renaming #ROLLED BACK NEW BRANCH CREATED
== pythonOCC-PDE2009 released
2009/4/27:
	- Added XML/RPC sample
2009/4/26:
	- added __getstate__ and __setstate__ methods for TopoDS_Shape serialization
2009/4/23:
	- added Standard_OStream and Standard_IStream handle
2009/4/21:
	- added ToString method to Standard_GUID class
2009/4/20:
	- added STEP.py script and DataExchange folder
	- new byref parameter
	
== pythonOCC-wo0.2 released ==

2009/4/10:
	- code clean up
	- new wxSampleGui.py sample framework
	- bugfix: in setup.py, ig OCC folder is not dir
2009/4/06:
	- Added CAF*
	- Added CAF sample
2009/4/02:
	- Beginning of SalomeGEOM integration
	- Bugfix: Quantity_Parameter & byref parameter fix
	- New geomplate sample
2009/4/01:
	- Added Expr module
	- Added CaseSensitiveGlob for Windows
	- TopOpeBRep_tools.hxx is now in SWIG_FILES_PATH_MODULAR directory
	- Interactive.py bugfixes (HLR/antialiasing)
2009/3/31:
	- overloaded __hash__() with HashCode() for *almost* all pythonOCC objects
2009/3/27:
	- bugfixes in CADViewer and CADViewerMDI
	- new Mesh sample
2009/3/26:
	- the '==' operator is wrapped
	- byref parameter for Standard_Integer &
2009/3/25:
	- New Topology module
	- Level1 andLevel2 hierarchy of samples
2009/3/23:
	- LocOpe fix for Linux
	- in SWIG_generator, added sorting of self.dependencies_headers
	- if PYTHONOCC_VERBOSE defined, call to custom destructor is displayed
2009/3/22:
	- Added 'YELLOW' and GetSelectedShape to OCCViewer.py
	- Added Visual3d, TopOpeBREpBuild, BRepFeat, TPrsStd for Linux/Darwin
2009/3/21:
	- custom destructor extended to all objects