@@ -1,3 +1,9 @@
+2009/08/23:
+	- added PyQt4 support
+	- OCCViewer updated to enable wheel zoom
+	
+== pythonOCC-0.3 released
+	
 2009/08/2:
 	- update to SalomeGeometry 5.1.2
 2009/07/3:
